# github-actions-runner-aws

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  github-actions-runner-aws.nix
.github/workflows/: canary.yml  deploy.yml  nix.yml
ansible/: amazon-cloudwatch-agent.json  runner.yml  tag.sh.j2  user-data.sh
src/: github.rs  main.rs  run_instance.rs  terminate_instance.rs  user_data.rs  webhook.rs
src/files/: config.alloy  user-data.sh
src/webhook/: terminate_instance.rs
src/webhook/files/: config.alloy
terraform/: api_gateway.tf  ec2.tf  lambda.tf  launch_template.tf  main.tf  variables.tf  vpc.tf
webhooks/queued/: Cargo.toml
webhooks/queued/src/: main.rs
